--- a/doanasp/doanasp/Views/HoaDons/Index.cshtml
+++ b/doanasp/doanasp/Views/HoaDons/Index.cshtml
@@ -2,6 +2,7 @@
 
 @{
     ViewData["Title"] = "Index";
+    var invoiceGroups = Model.GroupBy(i => i.makhachhang).OrderBy(i => i.Key);
 }
 
 <h1>Index</h1>
@@ -36,36 +37,75 @@
             <th></th>
         </tr>
     </thead>
+    @*<tbody>
+        @foreach (var item in Model) {
+                <tr>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.makhachhang)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.diachi)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.ghichu)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.ngaylap)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.capnhat)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.tongtien)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.trangthai)
+                    </td>
+                    <td>
+                        <a asp-action="Edit" asp-route-id="@item.mahoadon">Edit</a> |
+                        <a asp-action="Details" asp-route-id="@item.mahoadon">Details</a> |
+                        <a asp-action="Delete" asp-route-id="@item.mahoadon">Delete</a>
+                    </td>
+                </tr>
+        }
+        </tbody>*@
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.makhachhang)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.diachi)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.ghichu)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.ngaylap)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.capnhat)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.tongtien)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.trangthai)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.mahoadon">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.mahoadon">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.mahoadon">Delete</a>
-            </td>
-        </tr>
-}
+        @foreach (var group in invoiceGroups)
+        {
+            @foreach (var item in group)
+            {
+                <tr>
+                    @if (item == group.First())
+                    {
+                        <td rowspan="@group.Count()" class="font-weight-bold">
+                            @Html.DisplayFor(modelItem => group.Key) (@group.Count())
+                        </td>
+                    }
+                    <td>
+                        @Html.DisplayFor(modelItem => item.diachi)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.ghichu)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.ngaylap)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.capnhat)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.tongtien)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.trangthai)
+                    </td>
+                    <td>
+                        <a asp-action="Edit" asp-route-id="@item.mahoadon">Edit</a> |
+                        <a asp-action="Details" asp-route-id="@item.mahoadon">Details</a> |
+                        <a asp-action="Delete" asp-route-id="@item.mahoadon">Delete</a>
+                    </td>
+                </tr>
+            }
+        }
     </tbody>
 </table>
