--- a/doanasp/doanasp/Views/Shared/_Layout.cshtml
+++ b/doanasp/doanasp/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - doanasp</title>
+    <title>@ViewData["Title"] TTShop</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
 </head>
@@ -18,25 +18,25 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-controller="Home" asp-action="Index">Trang Chủ</a>
+                            <a class="nav-link text-dark" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-controller="HoaDons" asp-action="Index">Hóa Đơn</a>
+                            <a class="nav-link text-dark" asp-controller="Invoices" asp-action="Index">Invoice</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-controller="accounts" asp-action="Index">Tài Khoản</a>
+                            <a class="nav-link text-dark" asp-controller="Accounts" asp-action="Index">Account</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-controller="sanphams" asp-action="Index">Sản Phẩm</a>
+                            <a class="nav-link text-dark" asp-controller="Products" asp-action="Index">Product</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-controller="Loaisanphams" asp-action="Index">Danh Mục Sản Phẩm</a>
+                            <a class="nav-link text-dark" asp-controller="ProductTypes" asp-action="Index">Product Type</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-controller="ChiTietHoaDons" asp-action="Index">Chi Tiết Đơn Hàng</a>
+                            <a class="nav-link text-dark" asp-controller="InvoiceDetails" asp-action="Index">Invoice Details</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-controller="GioHangs" asp-action="Index">Giỏ Hàng</a>
+                            <a class="nav-link text-dark" asp-controller="Carts" asp-action="Index">Cart</a>
                         </li>
                         
 
