--- a/doanasp/doanasp/Views/Invoices/Delete.cshtml
+++ b/doanasp/doanasp/Views/Invoices/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model doanasp.Models.Invoice
+﻿    @model doanasp.Models.Invoice
 
 @{
     ViewData["Title"] = "Delete";
@@ -45,7 +45,7 @@
             @Html.DisplayNameFor(model => model.Account)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Account.Password)
+            @Html.DisplayFor(model => model.AccountId)
         </dd class>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Status)
