--- a/doanasp/doanasp/Views/Invoices/Index.cshtml
+++ b/doanasp/doanasp/Views/Invoices/Index.cshtml
@@ -28,7 +28,7 @@
                 @Html.DisplayNameFor(model => model.Total)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Account)
+                @Html.DisplayNameFor(model => model.AccountId)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Status)
@@ -55,7 +55,7 @@
                 @Html.DisplayFor(modelItem => item.Total)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Account.Password)
+                @Html.DisplayFor(modelItem => item.AccountId)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Status)
