--- a/doanasp/doanasp/Views/Invoices/Details.cshtml
+++ b/doanasp/doanasp/Views/Invoices/Details.cshtml
@@ -44,7 +44,7 @@
             @Html.DisplayNameFor(model => model.Account)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Account.Password)
+            @Html.DisplayFor(model => model.AccountId)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Status)
