--- a/doanasp/doanasp/Views/Shared/_LayoutMember.cshtml
+++ b/doanasp/doanasp/Views/Shared/_LayoutMember.cshtml
@@ -160,13 +160,8 @@
         <div id="responsive-nav">
             <!-- NAV -->
             <ul class="main-nav nav navbar-nav">
-                <li class="active"><a href="#">Home</a></li>
+                <li><a asp-controller="Home" asp-action="Index">Home</a></li>
                 <li><a asp-controller="Products" asp-action="PD">Product</a></li>
-                <li><a href="#">Categories</a></li>
-                <li><a href="#">Laptops</a></li>
-                <li><a href="#">Smartphones</a></li>
-                <li><a href="#">Cameras</a></li>
-                <li><a href="#">Accessories</a></li>
             </ul>
             <!-- /NAV -->
         </div>
