--- a/doanasp/doanasp/Views/Products/PD.cshtml
+++ b/doanasp/doanasp/Views/Products/PD.cshtml
@@ -1,4 +1,4 @@
-﻿@{ 
+﻿@{
     Layout = "_LayoutMember";
 }
 <body>
@@ -14,7 +14,7 @@
             <div class="row">
                 <div class="col-md-12">
                     <ul class="breadcrumb-tree">
-                        <li><a href="#">Home</a></li>
+                        <li><a asp-controller="Home" asp-action="index">Home</a></li>
                         <li><a href="#">All Categories</a></li>
                         <li><a href="#">Accessories</a></li>
                         <li class="active">Headphones (227,490 Results)</li>
@@ -308,34 +308,34 @@
                         <!-- product -->
                         <div class="col-md-4 col-xs-6">
                             <<div class="product">
-    <div class="product-img">
-        <img src="~/img/product01.png" alt="">
-        <div class="product-label">
-            <span class="sale">-30%</span>
-            <span class="new">NEW</span>
-        </div>
-    </div>
-    <div class="product-body">
-        <p class="product-category">Category</p>
-        <h3 class="product-name"><a asp-controller="ProductTypes" asp-action="PDT">product name goes here</a></h3>
-        <h4 class="product-price">$980.00 <del class="product-old-price">$990.00</del></h4>
-        <div class="product-rating">
-            <i class="fa fa-star"></i>
-            <i class="fa fa-star"></i>
-            <i class="fa fa-star"></i>
-            <i class="fa fa-star"></i>
-            <i class="fa fa-star"></i>
-        </div>
-        <div class="product-btns">
-            <button class="add-to-wishlist"><i class="fa fa-heart-o"></i><span class="tooltipp">add to wishlist</span></button>
-            <button class="add-to-compare"><i class="fa fa-exchange"></i><span class="tooltipp">add to compare</span></button>
-            <button class="quick-view"><i class="fa fa-eye"></i><span class="tooltipp">quick view</span></button>
-        </div>
-    </div>
-    <div class="add-to-cart">
-        <button class="add-to-cart-btn"><i class="fa fa-shopping-cart"></i> add to cart</button>
-    </div>
-</div>
+                                <div class="product-img">
+                                    <img src="~/img/product01.png" alt="">
+                                    <div class="product-label">
+                                        <span class="sale">-30%</span>
+                                        <span class="new">NEW</span>
+                                    </div>
+                                </div>
+                                <div class="product-body">
+                                    <p class="product-category">Category</p>
+                                    <h3 class="product-name"><a asp-controller="ProductTypes" asp-action="PDT">product name goes here</a></h3>
+                                    <h4 class="product-price">$980.00 <del class="product-old-price">$990.00</del></h4>
+                                    <div class="product-rating">
+                                        <i class="fa fa-star"></i>
+                                        <i class="fa fa-star"></i>
+                                        <i class="fa fa-star"></i>
+                                        <i class="fa fa-star"></i>
+                                        <i class="fa fa-star"></i>
+                                    </div>
+                                    <div class="product-btns">
+                                        <button class="add-to-wishlist"><i class="fa fa-heart-o"></i><span class="tooltipp">add to wishlist</span></button>
+                                        <button class="add-to-compare"><i class="fa fa-exchange"></i><span class="tooltipp">add to compare</span></button>
+                                        <button class="quick-view"><i class="fa fa-eye"></i><span class="tooltipp">quick view</span></button>
+                                    </div>
+                                </div>
+                                <div class="add-to-cart">
+                                    <button class="add-to-cart-btn"><i class="fa fa-shopping-cart"></i> add to cart</button>
+                                </div>
+                            </div>
                         </div>
                         <!-- /product -->
 
@@ -561,3 +561,8 @@
         <!-- /container -->
     </div>
 </body>
+@section productTypeName {
+    <select class="input-select" asp-items="ViewBag.ProductType">
+    </select>
+
+}
