--- a/doanasp/doanasp/Views/Shared/_LayoutMember.cshtml
+++ b/doanasp/doanasp/Views/Shared/_LayoutMember.cshtml
@@ -43,7 +43,7 @@
             <div class="container">
                 <ul class="header-links pull-right">
                     <li><a href="#"><i class="fa fa-dollar"></i> USD</a></li>
-                    <li><a href="#"><i class="fa fa-user-o"></i> My Account</a></li>
+                    <li><a asp-controller="Accounts" asp-action="Login"><i class="fa fa-user-o"></i> My Account</a></li>
                 </ul>
             </div>
         </div>
